# biblary

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
biblary/: __init__.py  forms.py  settings.py  urls.py  utils.py  views.py
biblary/bibliography/: __init__.py  bibliography.py  entry.py  exceptions.py
biblary/bibliography/adapter/: __init__.py  abstract.py  bibtex.py
biblary/bibliography/storage/: __init__.py  abstract.py  file_system.py
biblary/templates/biblary/: index.html  upload.html  upload_entry.html  upload_file.html
biblary/templatetags/: authors.py
tests/: conftest.py  settings.py  test_templatetags.py  test_utils.py  test_views.py
tests/bibliography/: test_bibliography.py  test_entry.py
tests/bibliography/adapter/: test_bibtex.py
tests/bibliography/storage/: test_file_system.py
tests/fixtures/bibliography/: basic.bib
