[build-system]
requires = ['setuptools>=55.0']

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    'bad-continuation',
    'duplicate-code',
    'import-outside-toplevel',
    'too-few-public-methods',
    'too-many-ancestors',
    'too-many-arguments',
    'too-many-instance-attributes',
]

[tool.yapf]
based_on_style = 'google'
column_limit = 120
dedent_closing_brackets = true
coalesce_brackets = true
align_closing_bracket_with_visual_indent = true
split_arguments_when_comma_terminated = true
indent_dictionary_value = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'tests.settings'
testpaths = [
    'tests'
]
