[build-system]
requires = ['flit_core>=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'biblary'
dynamic = ['version']
description = 'A Django application to provide a bibliography based on a bibtex library.'
authors = [
    {name = 'Sebastiaan P. Huber', email = 'mail@sphuber.net'}
]
readme = 'README.md'
license = {file = 'LICENSE.txt'}
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Django',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
keywords = ['bibliography', 'django', 'bibtex']
requires-python = '>=3.7'
dependencies = [
    'bibtexparser',
    'django >= 3.0',
    'typing-extensions;python_version < "3.8"'
]

[project.urls]
Source = 'https://github.com/sphuber/biblary'

[project.optional-dependencies]
dev = [
    'pre-commit',
    'pylint',
    'pytest',
    'pytest-django',
]

[tool.flit.module]
name = 'biblary'

[tool.flit.sdist]
exclude = [
    '.github/',
    'tests/',
]

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    'bad-continuation',
    'duplicate-code',
    'import-outside-toplevel',
    'too-few-public-methods',
    'too-many-ancestors',
    'too-many-arguments',
    'too-many-instance-attributes',
]

[tool.yapf]
based_on_style = 'google'
column_limit = 120
dedent_closing_brackets = true
coalesce_brackets = true
align_closing_bracket_with_visual_indent = true
split_arguments_when_comma_terminated = true
indent_dictionary_value = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'tests.settings'
testpaths = [
    'tests'
]
