[metadata]
name = biblary
version = attr: biblary.__version__
description = A Django application to provide a bibliography based on a bibtex library.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/sphuber/biblary
author = Sebastiaan P. Huber
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Django
keywords = bibliography, django, bibtex

[options]
packages = find:
install_requires =
    bibtexparser
    django >= 3.0
    typing-extensions;python_version < '3.8'
python_requires = ~=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pre-commit
    pylint
    pytest
    pytest-django
